# Uptime

./: .clangd  .gitignore  CMakeLists.txt  README.md  log.tmp  main.cpp  meson.build  meson.options  todo.md
inc/: client.hpp  columnView.hpp  column_view.hpp  context.hpp  db.hpp  db_out.hpp  debugger.hpp  get_uptime.hpp  ipc_interface.hpp  lazy_load.hpp  logger.hpp  main_window.hpp  ram_storage.hpp  record_item.hpp  record_model.hpp  server.hpp  settings.hpp  stack_pages.hpp  time.hpp
inc/common/: aliases.hpp  change_dir.hpp  check_unique.hpp  ipc_interface.hpp  logger.hpp  notificaion.hpp  settings.hpp  signal_event.hpp  signals_object.hpp  time.hpp  toml_structs.hpp  utils.hpp  xdg_dirs.hpp
inc/demon/: better_uptime.hpp  db.hpp  epoll.hpp  get_uptime.hpp  modules.hpp  plugin.hpp  poll.hpp  process_info.hpp  ram_storage.hpp  server.hpp  settings.hpp  signals.hpp  time_event.hpp
inc/gui/: app_info.hpp  builder.hpp  column_view.hpp  context.hpp  db.hpp  lazy_load.hpp  record_item.hpp  settings.hpp  state.hpp  utils.hpp
inc/gui/utils/: table_menu.hpp
inc/server/: connection.hpp  coroutine.hpp  server.hpp
res/: gui.desktop  uptimer.service  uptimer.toml
res/data/: main.blp  main.ui  prefetch.xml  table_menu.ui  template.db
res/db/: uptime.db  uptime.db-journal
res/gui/: main.blp  main.ui
src/: change_dir.cpp  check_unique.cpp  logger.cpp  notification.cpp  time.cpp  utils.cpp  xdg_dirs.cpp
src/common/: check_unique.cpp  logger.cpp  settings.cpp  utils.cpp
src/demon/: better_upimte.cpp  db.cpp  epoll.cpp  get_uptime.cpp  plugin.cpp  poll.cpp  ram_storage.cpp  server.cpp  settings.cpp  settings.cpp.bak  signals.cpp
src/demon/de_dependent/: gnome.cpp  hyprland.cpp  hyprland_true.cpp  sway.cpp
src/gui/: app_info.cpp  builder.cpp  client.cpp  columnView.cpp  column_view.cpp  context.cpp  db.cpp  db_out.cpp  lazy_load.cpp  main.cpp  record_item.cpp  state.cpp
src/gui/builder/: column_view.cpp  stack.cpp  table_navigation.cpp
src/gui/utils/: table_menu.cpp
src/server/: connection.cpp  coroutine.cpp  main.cpp  server.cpp
tests/: tests.cpp  tests.hpp  uptime.db
